<resources>
    <string name="app_name">CalculatorDesign</string>
    <string name="_45_1250_x_100_10">0</string>
    <string name="_12_545">0</string>
    <string name="e">e</string>
    <string name="_960">π</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="c">C</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="slash">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
</resources>